Interaction system update

--- a/Maximon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Maximon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,7 @@ NewWindowHeight=728
 MultipleInstancePositions=(X=320,Y=155)
 
 [EditorStartup]
-LastLevel=/Game/Maximon/Maps/InteractionConcept
+LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -149,7 +149,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Maximon/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Maximon/Blueprints
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.130778
@@ -660,12 +660,12 @@ LastLogListing=LoadErrors
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maximon/Materials/MInteract_Highlight
-MRUItem1=/Game/Maximon/Blueprints/FInteractableVariables
-MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem3=/Game/Maximon/Blueprints/BPI_Interact
-MRUItem4=/Game/Maximon/Blueprints/BP_BaseInteractable
-MRUItem5=/Game/Maximon/Maps/InteractionConcept
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/Maximon/Blueprints/BP_BaseInteractable
+MRUItem2=/Game/Maximon/Blueprints/FInteractableVariables
+MRUItem3=/Game/Maximon/Maps/InteractionConcept
+MRUItem4=/Game/Maximon/Materials/MInteract_Highlight
+MRUItem5=/Game/Maximon/Blueprints/BPI_Interact
 MRUItem6=/Game/Maximon/Maps/UpperLevel_Concept
 MRUItem7=/Game/ThirdPersonBP/Maps/InteractionConcept
 MRUItem8=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
@@ -1557,7 +1557,7 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
-PostProcessVolume=PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Color Grading.Color Grading|WhiteBalance,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Light Propagation Volume,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,
+PostProcessVolume=PostProcessVolume.Lens.Lens
 BrushComponent=
 
 [AssetEditorToolkitTabLocation]
