--- a/Maximon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Maximon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,7 +82,7 @@ MultipleInstancePositions=(X=320,Y=155)
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -149,7 +149,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Maximon/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Maximon/Maps
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.130778
@@ -660,10 +660,10 @@ LastLogListing=LoadErrors
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/Maximon/Blueprints/BP_BaseInteractable
-MRUItem2=/Game/Maximon/Blueprints/FInteractableVariables
-MRUItem3=/Game/Maximon/Maps/InteractionConcept
+MRUItem0=/Game/Maximon/Maps/InteractionConcept
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/Maximon/Blueprints/BP_BaseInteractable
+MRUItem3=/Game/Maximon/Blueprints/FInteractableVariables
 MRUItem4=/Game/Maximon/Materials/MInteract_Highlight
 MRUItem5=/Game/Maximon/Blueprints/BPI_Interact
 MRUItem6=/Game/Maximon/Maps/UpperLevel_Concept
