Test Push of new Assets

--- a/Maximon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Maximon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,7 @@ NewWindowHeight=728
 MultipleInstancePositions=(X=320,Y=155)
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/Maximon/Maps/InteractionConcept
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -652,6 +652,43 @@ Actor.Rendering=True
 Actor.Replication=True
 Actor.Input=True
 Actor.Actor=True
+Ball_C.Tick=True
+Ball_C.Replication=True
+Ball_C.Rendering=True
+Ball_C.Collision=True
+Ball_C.Actor=True
+Ball_C.Input=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+MEEE_Blueprint_C.Tick=True
+MEEE_Blueprint_C.Actor=True
+MEEE_Blueprint_C.Replication=True
+MEEE_Blueprint_C.Rendering=True
+MEEE_Blueprint_C.Collision=True
+MEEE_Blueprint_C.Input=True
+MEEE_Blueprint_C.TransformCommon=True
+MEEE_Blueprint_C.StaticMesh=True
+MEEE_Blueprint_C.Materials=True
+MEEE_Blueprint_C.Physics=True
+MEEE_Blueprint_C.Lighting=True
+MEEE_Blueprint_C.Navigation=True
+MEEE_Blueprint_C.VirtualTexture=True
+MEEE_Blueprint_C.Tags=True
+MEEE_Blueprint_C.Cooking=True
+NewBlueprint_C.Tick=True
+NewBlueprint_C.Replication=True
+NewBlueprint_C.Rendering=True
+NewBlueprint_C.Collision=True
+NewBlueprint_C.Actor=True
+NewBlueprint_C.Input=True
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -660,15 +697,18 @@ LastLogListing=LoadErrors
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maximon/Maps/InteractionConcept
-MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem2=/Game/Maximon/Blueprints/BP_BaseInteractable
-MRUItem3=/Game/Maximon/Blueprints/FInteractableVariables
-MRUItem4=/Game/Maximon/Materials/MInteract_Highlight
-MRUItem5=/Game/Maximon/Blueprints/BPI_Interact
-MRUItem6=/Game/Maximon/Maps/UpperLevel_Concept
-MRUItem7=/Game/ThirdPersonBP/Maps/InteractionConcept
-MRUItem8=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem0=/Game/Maximon/Blueprints/NewBlueprint
+MRUItem1=/Game/Maximon/Blueprints/MEEE_Blueprint
+MRUItem2=/Game/Maximon/Blueprints/Ball
+MRUItem3=/Game/Maximon/Maps/InteractionConcept
+MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem5=/Game/Maximon/Blueprints/BP_BaseInteractable
+MRUItem6=/Game/Maximon/Blueprints/FInteractableVariables
+MRUItem7=/Game/Maximon/Materials/MInteract_Highlight
+MRUItem8=/Game/Maximon/Blueprints/BPI_Interact
+MRUItem9=/Game/Maximon/Maps/UpperLevel_Concept
+MRUItem10=/Game/ThirdPersonBP/Maps/InteractionConcept
+MRUItem11=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [SlateAdditionalLayoutConfig]
 Viewport 2.LayoutType=FourPanes2x2
@@ -1566,11 +1606,15 @@ BrushComponent=
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
 /Game/Maximon/Blueprints/BPI_Interact.BPI_Interact=0
 /Game/Maximon/Blueprints/BP_BaseInteractable.BP_BaseInteractable=0
+/Game/Maximon/Blueprints/MEEE_Blueprint.MEEE_Blueprint=0
+/Game/Maximon/Blueprints/Ball.Ball=0
+/Game/Maximon/Blueprints/NewBlueprint.NewBlueprint=1
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Maximon/Blueprints/BP_BaseInteractable.BP_BaseInteractable;
 
 [MaterialEditor]
