--- a/Maximon/Saved/Config/Windows/SourceControlSettings.ini
+++ b/Maximon/Saved/Config/Windows/SourceControlSettings.ini
@@ -1,3 +1,6 @@
 [SourceControl.SourceControlSettings]
-Provider=None
+Provider=Git
+
+[GitSourceControl.GitSourceControlSettings]
+BinaryPath=D:/Program Files/Git/cmd/git.exe
 
