--- a/Maximon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Maximon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1614,6 +1614,8 @@ BrushComponent=
 ChangeVariableType_Warning=False
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Maximon/Blueprints/BP_BaseInteractable.BP_BaseInteractable;
 
