setting upper level concept as the default level

--- a/Maximon/Config/DefaultEngine.ini
+++ b/Maximon/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Maximon
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/Maximon/Maps/UpperLevel_Concept.UpperLevel_Concept
+GameDefaultMap=/Game/Maximon/Maps/UpperLevel_Concept.UpperLevel_Concept
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
