--- a/Maximon/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Maximon/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -148,7 +148,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Maximon/Maps
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -166,8 +166,11 @@ LastLevel=/Game/Maximon/Maps/UpperLevel_Concept
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maximon/Maps/UpperLevel_Concept
-MRUItem1=/Game/Maximon/Maps/InteractionConcept
+MRUItem0=/Game/Maximon/Blueprints/FInteractableVariables
+MRUItem1=/Game/Maximon/Blueprints/Ball
+MRUItem2=/Game/Maximon/Blueprints/MEEE_Blueprint
+MRUItem3=/Game/Maximon/Maps/UpperLevel_Concept
+MRUItem4=/Game/Maximon/Maps/InteractionConcept
 
 [RootWindow]
 ScreenPosition=X=-1456.000 Y=231.000
@@ -1076,6 +1079,10 @@ MovieSceneCapture.TimeStamp=2022.07.27-11.27.04
 MovieSceneCapture.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2022.07.27-11.27.04
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2022.07.27-11.27.00
+ExternalImagePicker.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2022.07.27-11.26.54
+BlueprintGraph.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1233,6 +1240,310 @@ LandscapeGizmoActiveActor.Actor=True
 Brush.Surface Materials=True
 Brush.Geometry=True
 Brush.Surface Properties=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+CryptoKeysSettings.Encryption=True
+CryptoKeysSettings.Signing=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=False
+GameMapsSettings.GameInstance=False
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AssetToolsSettings.Advanced Copy=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.Blackboard=True
+AISystem.Behavior Tree=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AnimationSettings.CustomAttributes=True
+AnimationSettings.Mirroring=True
+AnimationModifierSettings.Modifiers=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Mix=True
+AudioSettings.Quality=True
+AudioSettings.Debug=True
+ChaosSolverSettings.GameInstance=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+ControlRigSettings.Shapes=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CookerSettings.Editor=True
+CrowdManager.Config=True
+DataDrivenConsoleVariableSettings.DataDrivenCVar=True
+DebugCameraControllerSettings.General=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+GarbageCollectionSettings.Debug=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+Engine.Timecode=True
+Engine.Screenshots=True
+HierarchicalLODSettings.HLODSystem=True
+InputSettings.Bindings=True
+InputSettings.ViewportProperties=True
+InputSettings.Input=True
+InputSettings.Mobile=True
+InputSettings.Virtual Keyboard (Mobile)=True
+InputSettings.DefaultClasses=True
+InputSettings.Console=True
+InterchangeProjectSettings.Interchange=True
+InterchangeProjectSettings.Interchange (Experimental)=True
+LandscapeSettings.Layers=True
+LevelSequenceProjectSettings.Timeline=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+RecastNavMesh.Collision=True
+RecastNavMesh.HLOD=True
+RecastNavMesh.WorldPartition=True
+NavigationSystemV1.Navigation=True
+NavigationSystemV1.NavigationSystem=True
+NavigationSystemV1.Navigation Enforcing=True
+NavigationSystemV1.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+PhysicsSettings.Replication=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Broadphase=True
+PhysicsSettings.ChaosPhysics=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.VirtualTextures=True
+RendererSettings.WorkingColorSpace=True
+RendererSettings.GlobalIllumination=True
+RendererSettings.Reflections=True
+RendererSettings.Lumen=True
+RendererSettings.Shadows=True
+RendererSettings.HardwareRayTracing=True
+RendererSettings.SoftwareRayTracing=True
+RendererSettings.MiscLighting=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Translucency=True
+RendererSettings.VR=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.Experimental=True
+RendererSettings.Editor=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererSettings.Skinning=True
+RendererSettings.PostProcessCalibrationMaterials=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+StreamingSettings.General=True
+StreamingSettings.Deprecated Settings=True
+TextureEncodingProjectSettings.EncodeSpeedSettings=True
+TextureEncodingProjectSettings.EncodeSpeeds=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+WorldPartitionEditorSettings.MapConversion=True
+WorldPartitionEditorSettings.Foliage=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+EditorProjectAppearanceSettings.ReferenceViewer=True
+BlueprintEditorProjectSettings.Blueprints=True
+BlueprintEditorProjectSettings.Actors=True
+BlueprintEditorProjectSettings.Experimental=True
+BlueprintEditorProjectSettings.Play=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+DDCProjectSettings.Warnings=True
+ProxyLODMeshSimplificationSettings.General=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+EditorPerformanceProjectSettings.ViewportResolution=True
+SkeletalMeshSimplificationSettings.General=True
+SourceControlPreferences.SourceControl=True
+StructViewerProjectSettings.StructVisibilityManagement=True
+TextureImportSettings.VirtualTextures=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
+AndroidRuntimeSettings.APK Packaging=True
+AndroidRuntimeSettings.App Bundles=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.Advanced APK Packaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.Input=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+AndroidRuntimeSettings.Misc=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+HoloLensTargetSettings.OS Info=True
+HoloLensTargetSettings.HoloLens=True
+HoloLensTargetSettings.Packaging=True
+HoloLensTargetSettings.Toolchain=True
+HoloLensTargetSettings.App Installer=True
+HoloLensTargetSettings.Capabilities=True
+HoloLensTargetSettings.Rendering=True
+HoloLensTargetSettings.Audio=True
+HoloLensTargetSettings.Spatial Mapping=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.FileSystem=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.LaunchScreen=True
+IOSRuntimeSettings.tvOS=True
+IOSRuntimeSettings.Audio=True
+IOSRuntimeSettings.Misc=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+LinuxTargetSettings.Audio=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AndroidFileServerRuntimeSettings.Packaging=True
+AndroidFileServerRuntimeSettings.Deployment=True
+AndroidFileServerRuntimeSettings.Connection=True
+AvfMediaSettings.Debug=True
+GeometryCacheStreamerSettings.Geometry Cache Streamer=True
+GooglePADRuntimeSettings.Packaging=True
+GroomPluginSettings.GroomCache=True
+ImgMediaSettings.General=True
+ImgMediaSettings.Caching=True
+ImgMediaSettings.EXR=True
+ImgMediaSettings.Proxies=True
+LevelSequenceEditorSettings.Tracks=True
+LevelSequenceEditorSettings.Playback=True
+ModelingComponentsSettings.Modeling Tools=True
+NiagaraSettings.Niagara=True
+NiagaraSettings.Viewport=True
+NiagaraSettings.Scalability=True
+NiagaraSettings.Renderer=True
+NiagaraSettings.SkeletalMeshDI=True
+NiagaraSettings.StaticMeshDI=True
+NiagaraSettings.AsyncGpuTraceDI=True
+NiagaraEditorSettings.Niagara=True
+NiagaraEditorSettings.Experimental=True
+NiagaraEditorSettings.SimulationOptions=True
+NiagaraEditorSettings.Niagara Colors=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+PythonScriptPluginSettings.Python=True
+PythonScriptPluginSettings.PythonRemoteExecution=True
+ResonanceAudioSettings.Reverb=True
+ResonanceAudioSettings.General=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Availability=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
+MEEE_Blueprint_C.Actor=True
+MEEE_Blueprint_C.Tick=True
+MEEE_Blueprint_C.Replication=True
+MEEE_Blueprint_C.Rendering=True
+MEEE_Blueprint_C.Collision=True
+MEEE_Blueprint_C.Input=True
+MEEE_Blueprint_C.HLOD=True
+MEEE_Blueprint_C.WorldPartition=True
+MEEE_Blueprint_C.Events=True
+EdGraph.Graph=True
+Ball_C.Tick=True
+Ball_C.Replication=True
+Ball_C.Rendering=True
+Ball_C.Collision=True
+Ball_C.Actor=True
+Ball_C.Input=True
+Ball_C.HLOD=True
+Ball_C.WorldPartition=True
+Ball_C.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+UserDefinedStruct.Structure=True
+TriggerSphere.TransformCommon=True
+TriggerSphere.Shape=True
+TriggerSphere.Navigation=True
+TriggerSphere.HLOD=True
+TriggerSphere.Physics=True
+TriggerSphere.Rendering=True
+TriggerSphere.Collision=True
+TriggerSphere.Tags=True
+TriggerSphere.Cooking=True
+TriggerSphere.Replication=True
+TriggerSphere.Input=True
+TriggerSphere.Actor=True
 
 [LandscapeEdit]
 BrushRadius=50.3645782
@@ -1270,7 +1581,7 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume=
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
@@ -1278,6 +1589,7 @@ GeomModifier="\"Object.Settings\" "
 Object=
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerSphere;/Engine/Transient.ActorFactoryTriggerSphere_0
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1287,4 +1599,56 @@ ColorViewMode=Normal
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.StaticMesh=False
+
+[DetailMultiObjectNodeExpansion]
+GeneralProjectSettings=True
+GameMapsSettings=True
+
+[AssetEditorToolkitTabLocation]
+/Game/Maximon/Blueprints/MEEE_Blueprint.MEEE_Blueprint=0
+/Game/Maximon/Blueprints/FInteractableVariables.FInteractableVariables=0
+/Game/Maximon/Blueprints/Ball.Ball=0
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text","softclass")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=False
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
